@@ -1,3 +1,6 @@
+2011-08-01 gabriel.oliveira
+* Add ung listbox's knowledge_pad and related gadget
+
 2010-12-28 gabriel
 * Added erp5_full_text_myisam_catalog as dependency
 
